--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -48,7 +48,7 @@
 }
 
 .light1On {
-  background: red;
+  background: white;
 }
 
 .light2On {
@@ -60,5 +60,5 @@
 }
 
 .light4On {
-  background: green;
+  background: white;
 }
